// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@no-llm brief render surfaces (drift detection) > --json envelope through the ask command 1`] = `
"{"schemaVersion":"0.2","kind":"brief","brief":{"brief_id":"01ARZ3NDEKTSV4RRFFQ69G5FAV","task_id":"01ARZ3NDEKTSV4RRFFQ69G5FAW","schema_version":"0.2","title":"Cheapest Sony WH-1000XM5 today","overview":"Lowest price is **$328** at Amazon (down from a $399 list price). All three tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this week. [1][3]","key_findings":[{"text":"Amazon — $328, in stock, free shipping [1]","citations":[1],"editorial":false,"facet":{"price":328,"currency":"USD","in_stock":true},"children":[{"text":"Amazon also shows the steepest list-price discount among tracked retailers","citations":[1]}]},{"text":"Best Buy — $349, in stock [2]","citations":[2],"editorial":false,"facet":{"price":349,"in_stock":true},"children":[]},{"text":"Walmart — $342 via a third-party seller [3]","citations":[3],"editorial":false,"facet":{"price":342,"in_stock":true},"children":[]},{"text":"Prices have trended upward since last week, so buying now is reasonable.","citations":[],"editorial":true,"facet":null,"children":[]}],"sections":[{"heading":"Price & availability","body_md":"All three major retailers currently stock the WH-1000XM5. Amazon has the lowest sticker at $328, down from a $399 list price, followed by Walmart at $342 and Best Buy at $349. [1][2][3]","citations":[1,2,3]},{"heading":"Caveats","body_md":"The Walmart listing is fulfilled by a third-party seller, so warranty terms differ from a first-party sale. [3]","citations":[3]}],"facets":{"comparison":{"columns":["Retailer","Price","In stock"],"rows":[["Amazon","$328",true],["Best Buy","$349",true],["Walmart","$342",true]]}},"sources":[{"n":1,"url":"https://www.amazon.com/sony-wh-1000xm5","final_url":null,"host":"amazon.com","title":"Sony WH-1000XM5 Wireless Headphones — Amazon","excerpt":"Industry-leading noise cancellation with two processors and eight microphones. List price $399, current price $328.","fetched_at":"2026-07-01T09:00:00.000Z","published_at":"2026-06-28T00:00:00.000Z"},{"n":2,"url":"https://www.bestbuy.com/sony-wh-1000xm5","final_url":null,"host":"bestbuy.com","title":"Sony WH-1000XM5 | Best Buy","excerpt":null,"fetched_at":"2026-07-01T09:00:05.000Z","published_at":null},{"n":3,"url":"https://www.walmart.com/ip/sony-wh-1000xm5","final_url":null,"host":"walmart.com","title":"Sony WH-1000XM5 Headphones - Walmart","excerpt":null,"fetched_at":"2026-07-01T09:00:10.000Z","published_at":null}],"metadata":{"search_provider":"tavily","synthesis":"deterministic","deterministic_fallback_used":false,"coverage":1,"freshness":"today","citation_verdict":{"claims_checked":6,"flagged":0,"stripped":0},"usage":null,"evidence":null,"run_id":"01ARZ3NDEKTSV4RRFFQ69G5FAX"},"notices":[{"source":"example-blog.com","reason":"fetch timed out after 8000ms","kind":"fetch_failed"}]},"artifacts":null}
"
`;

exports[`@no-llm brief render surfaces (drift detection) > brief.html artifact 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Cheapest Sony WH-1000XM5 today</title>
<style>
:root { color-scheme: light dark; }
* { box-sizing: border-box; }
body {
  margin: 0;
  padding: 2rem 1rem;
  font-family: Georgia, "Times New Roman", serif;
  line-height: 1.6;
  color: #1a1a1a;
  background: #fafaf8;
}
.brief { max-width: 46rem; margin: 0 auto; }
h1 { font-size: 1.9rem; line-height: 1.2; margin: 0 0 1rem; }
h2 {
  font-size: 1.3rem;
  margin: 2rem 0 0.5rem;
  padding-bottom: 0.25rem;
  border-bottom: 1px solid #e0ddd5;
}
a { color: #1256a3; }
.overview {
  background: #fff;
  border: 1px solid #e0ddd5;
  border-left: 4px solid #1256a3;
  border-radius: 6px;
  padding: 0.75rem 1.25rem;
  margin: 1rem 0 1.5rem;
  font-size: 1.05rem;
}
.overview p:first-child { margin-top: 0; }
.overview p:last-child { margin-bottom: 0; }
table.comparison, section table {
  border-collapse: collapse;
  width: 100%;
  margin: 0.5rem 0 1rem;
  font-family: -apple-system, Segoe UI, Roboto, sans-serif;
  font-size: 0.95rem;
}
table.comparison th, table.comparison td, section table th, section table td {
  text-align: left;
  padding: 0.5rem 0.75rem;
  border-bottom: 1px solid #e0ddd5;
}
table.comparison thead th, section table thead th { border-bottom: 2px solid #cfc9bd; }
table.comparison tbody tr:nth-child(even), section table tbody tr:nth-child(even) { background: #f2efe9; }
ol.sources { padding-left: 1.5rem; }
ol.sources li { margin: 0.35rem 0; }
.src-meta { color: #6b675e; font-size: 0.85rem; }
blockquote.src-excerpt {
  margin: 0.25rem 0 0;
  padding: 0.1rem 0 0.1rem 0.75rem;
  border-left: 3px solid #e0ddd5;
  color: #4c4942;
  font-size: 0.9rem;
}
ul.key-findings { padding-left: 1.5rem; }
ul.key-findings li { margin: 0.35rem 0; }
ul.children {
  margin: 0.35rem 0 0;
  padding-left: 1.25rem;
  color: #4c4942;
}
ul.children li { margin: 0.2rem 0; }
sup.cite { font-size: 0.7em; margin-left: 1px; line-height: 0; }
sup.cite a, sup.cite span { color: #8a8578; text-decoration: none; }
sup.cite a:hover { text-decoration: underline; color: #1256a3; }
ul.notices {
  list-style: none;
  padding: 0;
  margin: 0.5rem 0;
}
ul.notices li {
  background: #fff8e6;
  border: 1px solid #eadfb8;
  border-radius: 4px;
  padding: 0.4rem 0.75rem;
  margin: 0.35rem 0;
  font-size: 0.9rem;
}
</style>
</head>
<body>
<main class="brief">
<h1>Cheapest Sony WH-1000XM5 today</h1>
<section class="overview"><p>Lowest price is <strong>$328</strong> at Amazon (down from a $399 list price). All three tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this week. <sup class="cite"><a href="#src-1">1</a></sup><sup class="cite"><a href="#src-3">3</a></sup></p></section>
<h2>Key Findings</h2>
<ul class="key-findings">
<li>Amazon — $328, in stock, free shipping <sup class="cite"><a href="#src-1">1</a></sup>
<ul class="children">
<li>Amazon also shows the steepest list-price discount among tracked retailers<sup class="cite"><a href="#src-1">1</a></sup></li>
</ul></li>
<li>Best Buy — $349, in stock <sup class="cite"><a href="#src-2">2</a></sup></li>
<li>Walmart — $342 via a third-party seller <sup class="cite"><a href="#src-3">3</a></sup></li>
<li>Prices have trended upward since last week, so buying now is reasonable. <em>(editorial)</em></li>
</ul>
<section><h2>Price &amp; availability</h2>
<p>All three major retailers currently stock the WH-1000XM5. Amazon has the lowest sticker at $328, down from a $399 list price, followed by Walmart at $342 and Best Buy at $349. <sup class="cite"><a href="#src-1">1</a></sup><sup class="cite"><a href="#src-2">2</a></sup><sup class="cite"><a href="#src-3">3</a></sup></p></section>
<section><h2>Caveats</h2>
<p>The Walmart listing is fulfilled by a third-party seller, so warranty terms differ from a first-party sale. <sup class="cite"><a href="#src-3">3</a></sup></p></section>
<h2>Comparison</h2>
<table class="comparison">
<thead><tr><th>Retailer</th><th>Price</th><th>In stock</th></tr></thead>
<tbody>
<tr><td>Amazon</td><td>$328</td><td>✓</td></tr>
<tr><td>Best Buy</td><td>$349</td><td>✓</td></tr>
<tr><td>Walmart</td><td>$342</td><td>✓</td></tr>
</tbody>
</table>
<h2>Sources</h2>
<ol class="sources">
<li id="src-1"><a href="https://www.amazon.com/sony-wh-1000xm5" rel="noopener noreferrer">Sony WH-1000XM5 Wireless Headphones — Amazon</a> <span class="src-meta">amazon.com · fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z</span>
<blockquote class="src-excerpt">Industry-leading noise cancellation with two processors and eight microphones. List price $399, current price $328.</blockquote></li>
<li id="src-2"><a href="https://www.bestbuy.com/sony-wh-1000xm5" rel="noopener noreferrer">Sony WH-1000XM5 | Best Buy</a> <span class="src-meta">bestbuy.com · fetched 2026-07-01T09:00:05.000Z</span></li>
<li id="src-3"><a href="https://www.walmart.com/ip/sony-wh-1000xm5" rel="noopener noreferrer">Sony WH-1000XM5 Headphones - Walmart</a> <span class="src-meta">walmart.com · fetched 2026-07-01T09:00:10.000Z</span></li>
</ol>
<h2>Notices</h2>
<ul class="notices">
<li><strong>fetch_failed</strong> — example-blog.com: fetch timed out after 8000ms</li>
</ul>
</main>
</body>
</html>
"
`;

exports[`@no-llm brief render surfaces (drift detection) > brief.md artifact 1`] = `
"# Cheapest Sony WH-1000XM5 today

> Lowest price is **$328** at Amazon (down from a $399 list price). All three tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this week. [1][3]

## Key Findings

- Amazon — $328, in stock, free shipping [1]
  - Amazon also shows the steepest list-price discount among tracked retailers [1]
- Best Buy — $349, in stock [2]
- Walmart — $342 via a third-party seller [3]
- Prices have trended upward since last week, so buying now is reasonable. *(editorial)*

## Price & availability

All three major retailers currently stock the WH-1000XM5. Amazon has the lowest sticker at $328, down from a $399 list price, followed by Walmart at $342 and Best Buy at $349. [1][2][3]

## Caveats

The Walmart listing is fulfilled by a third-party seller, so warranty terms differ from a first-party sale. [3]

## Comparison

| Retailer | Price | In stock |
| --- | --- | --- |
| Amazon | $328 | ✓ |
| Best Buy | $349 | ✓ |
| Walmart | $342 | ✓ |

## Sources

1. [Sony WH-1000XM5 Wireless Headphones — Amazon](https://www.amazon.com/sony-wh-1000xm5) — amazon.com · fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z
   > Industry-leading noise cancellation with two processors and eight microphones. List price $399, current price $328.
2. [Sony WH-1000XM5 | Best Buy](https://www.bestbuy.com/sony-wh-1000xm5) — bestbuy.com · fetched 2026-07-01T09:00:05.000Z
3. [Sony WH-1000XM5 Headphones - Walmart](https://www.walmart.com/ip/sony-wh-1000xm5) — walmart.com · fetched 2026-07-01T09:00:10.000Z

## Notices

- **fetch_failed** — example-blog.com: fetch timed out after 8000ms"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=full noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mKey Findings[22m
[32m•[39m Amazon — $328, in stock, free shipping [36m[1][39m
  [2m◦[22m [2mAmazon also shows the steepest list-price discount among tracked retailers [36m[1][39m[22m
[32m•[39m Best Buy — $349, in stock [36m[2][39m
[32m•[39m Walmart — $342 via a third-party seller [36m[3][39m
[33m◦[39m Prices have trended upward since last week, so buying now is reasonable.[2m (editorial)[22m

[1mComparison[22m
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│[36m Retailer                 [39m│[36m Price                   [39m│[36m In stock                [39m│
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

[1mPrice & availability[22m
All three major retailers currently stock the WH-1000XM5. Amazon has the lowest
sticker at $328, down from a $399 list price, followed by Walmart at $342 and
Best Buy at $349. [1][2][3]

[1mCaveats[22m
The Walmart listing is fulfilled by a third-party seller, so warranty terms
differ from a first-party sale. [3]

[1mNotices[22m
[33m⚠ example-blog.com: fetch timed out after 8000ms[39m

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[2m    https://www.amazon.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[2m    https://www.bestbuy.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:05.000Z[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m
[2m    https://www.walmart.com/ip/sony-wh-1000xm5  fetched 2026-07-01T09:00:10.000Z[22m"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=full noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Key Findings
• Amazon — $328, in stock, free shipping [1]
  ◦ Amazon also shows the steepest list-price discount among tracked retailers [1]
• Best Buy — $349, in stock [2]
• Walmart — $342 via a third-party seller [3]
◦ Prices have trended upward since last week, so buying now is reasonable. (editorial)

Comparison
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│ Retailer                 │ Price                   │ In stock                │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

Price & availability
All three major retailers currently stock the WH-1000XM5. Amazon has the lowest
sticker at $328, down from a $399 list price, followed by Walmart at $342 and
Best Buy at $349. [1][2][3]

Caveats
The Walmart listing is fulfilled by a third-party seller, so warranty terms
differ from a first-party sale. [3]

Notices
⚠ example-blog.com: fetch timed out after 8000ms

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
    https://www.amazon.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
    https://www.bestbuy.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:05.000Z
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com
    https://www.walmart.com/ip/sony-wh-1000xm5  fetched 2026-07-01T09:00:10.000Z"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=overview noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=overview noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=standard noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mKey Findings[22m
[32m•[39m Amazon — $328, in stock, free shipping [36m[1][39m
  [2m◦[22m [2mAmazon also shows the steepest list-price discount among tracked retailers [36m[1][39m[22m
[32m•[39m Best Buy — $349, in stock [36m[2][39m
[32m•[39m Walmart — $342 via a third-party seller [36m[3][39m
[33m◦[39m Prices have trended upward since last week, so buying now is reasonable.[2m (editorial)[22m

[1mComparison[22m
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│[36m Retailer                 [39m│[36m Price                   [39m│[36m In stock                [39m│
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

[1mNotices[22m
[33m⚠ example-blog.com: fetch timed out after 8000ms[39m

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=standard noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Key Findings
• Amazon — $328, in stock, free shipping [1]
  ◦ Amazon also shows the steepest list-price discount among tracked retailers [1]
• Best Buy — $349, in stock [2]
• Walmart — $342 via a third-party seller [3]
◦ Prices have trended upward since last week, so buying now is reasonable. (editorial)

Comparison
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│ Retailer                 │ Price                   │ In stock                │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

Notices
⚠ example-blog.com: fetch timed out after 8000ms

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com"
`;
